# project_anemoi

./: CMakeLists.txt  LICENSE  README.md  basic_functions.cpp  basic_functions.h  big_integer.h  constructors.cpp  helper_functions.h  main.cpp  operators.cpp  project_anemoi  project_anemoi.pro
bigint/: auxiliary.cpp  auxiliary.h  auxillary.cpp  auxillary.h  big_integer.h  bigint.h  constructors.cpp  functions.cpp  functions.h  operators.cpp  vec.h
